--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <section class="hero-wrapper">
+        <header>
+          <div class="logo">Header Logo</div>
+          <div class="links">
+              <ul>
+                  <li><a href="">header link one</a></li>
+                  <li><a href="">header link two</a></li>
+                  <li><a href="">header link three</a></li>
+              </ul>
+          </div>
+        </header>
+        <div class="hero">
+          <div class="hero-content">
+              <h1>This website is awesome</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab iusto, similique placeat blanditiis labore deleniti eum laborum. Provident nisi minus laboriosam quaerat aliquam error distinctio similique atque commodi, modi nesciunt?</p>
+              <button>Sign up</button>
+          </div>
+          <div class="hero-image">
+              this is placeholder for an image
+          </div>
+        </div>
+      </section>
 </body>
 </html>
