--- a/index.html
+++ b/index.html
@@ -32,5 +32,26 @@
           </div>
         </div>
       </section>
+      <section class="info">
+        <div class="info-title">Some random information.</div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
