Add quote section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
     <title>Landing Page</title>
 </head>
 <body>
@@ -52,6 +52,10 @@
                 <div class="card-text">This is some subtext under an illustration or image</div>
             </div>
         </div>
+      </section>
+      <section class="quote">
+        <div class="quote-text"><i>I know it sounds like I am bragging, but think of it as driving a Ferrari in real life. Why do people drive Ferraris? To get attention, looks, exert dominance and superiority from the norm, and to get people talking… but it also inspires jealousy and haters on the person driving.</i></div>
+        <div class="author">-Zyzz, God of Aesthetic</div>
       </section>
 </body>
 </html>
