Add call to action section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,12 @@
         <div class="quote-text"><i>I know it sounds like I am bragging, but think of it as driving a Ferrari in real life. Why do people drive Ferraris? To get attention, looks, exert dominance and superiority from the norm, and to get people talking… but it also inspires jealousy and haters on the person driving.</i></div>
         <div class="author">-Zyzz, God of Aesthetic</div>
       </section>
+      <section class="action-container">
+        <div class="action-content">
+            <h2>Call to action! It's time!</h2>
+            <p>Sign up for our product by clicking that button over there!</p>
+        </div>
+        <button>Sign up</button>
+      </section>
 </body>
 </html>
