Add footer section

--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
         </div>
         <button>Sign up</button>
       </section>
+      <footer>Copyright © The Odin Project</footer>
 </body>
 </html>
