Add style to buttons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="hero-content">
               <h1>This website is awesome</h1>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab iusto, similique placeat blanditiis labore deleniti eum laborum. Provident nisi minus laboriosam quaerat aliquam error distinctio similique atque commodi, modi nesciunt?</p>
-              <button>Sign up</button>
+              <button class="fill">Sign up</button>
           </div>
           <div class="hero-image">
               this is placeholder for an image
@@ -62,7 +62,7 @@
             <h2>Call to action! It's time!</h2>
             <p>Sign up for our product by clicking that button over there!</p>
         </div>
-        <button>Sign up</button>
+        <button class="unfill">Sign up</button>
       </section>
       <footer>Copyright © The Odin Project</footer>
 </body>
